Modify index.css for children tag of Book

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ h1 {
 @media screen and (min-width: 768px) {
   .BookList {
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
   }
 }
 
@@ -44,4 +45,8 @@ h1 {
   color: #617d98;
   font-size: 0.75rem;
   margin-top: 0.25rem;
+}
+
+.book p {
+  margin-top: 0.5rem;
 }
